<resources>
    <string name="app_name">TAS</string>

    // Text
    <string name="txt_next">Next</string>
    <string name="txt_finished">Finished</string>
    <string name="txt_get_started">Get Started!</string>
    <string name="txt_skip">Skip</string>
    <string name="txt_settings">Settings</string>
    <string name="txt_fcw_demo">FCW Demo</string>
    <string name="txt_demos">Demos</string>
    <string name="txt_rcw_demo">RCW Demo</string>
    <string name="txt_headway_default">0</string>

    // Titles
    <string name="title_onboarding_temp_heading">Temporary Heading</string>

    // Descriptions
    <string name="desc_main_img_right">An image with an arrow pointing to the right</string>
    <string name="desc_main_img_left">An image with an arrow pointing to the left</string>
    <string name="desc_main_img_car">An image with a car outline it\'s neutral state</string>
    <string name="desc_temp">Temporary Description</string>
    <string name="desc_onboard_item_image">Placeholder image for onboarding mapping</string>
    <string name="desc_welcome">Welcome to the Traffic Alert System.\nThis app is meant to provide
    you with visual and auditory cues to help make you as-well as those around you a safer driver.</string>
    <string name="txt_headway_demo">Headway Demo</string>
    <string name="txt_lcw_demo">LCW Demo</string>

    //Preferences
    <string name="pref_onboardFinished_key">pref_onboardFinished</string>
    <string name="pref_unitsMeasure_key">pref_unitsMeasure</string>
    <string name="pref_headway_key">pref_headway</string>

    <string name="pref_unitsMeasure_title">Units of Measure</string>
    <string name="pref_headway_title">Headway</string>

    <string name="pref_unitsMeasure_desc">The units to be used in length measurement</string>
    <string name="pref_headway_desc"> The distance for headway monitoring in seconds</string>

    <string name="pref_unitsMeasure_default">KM</string>

    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>



</resources>
