<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ListPreference
        android:defaultValue="@string/pref_unitsMeasure_default"
        android:key="@string/pref_unitsMeasure_key"
        android:summary="@string/pref_unitsMeasure_desc"
        android:title="@string/pref_unitsMeasure_title"
        android:entries="@array/pref_unitsMeasure_entries"
        android:entryValues="@array/pref_unitsMeasure_entriesValues"/>
    <SeekBarPreference
        android:key="@string/pref_headway_key"
        android:summary="@string/pref_headway_desc"
        android:title="@string/pref_headway_title"
        android:max="@integer/pref_headway_max"
        android:min="@integer/pref_headway_min"
        android:defaultValue="@integer/pref_headway_default"
        app:showSeekBarValue="true"/>

</PreferenceScreen>