<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:title="@string/txt_demos">
        <menu>
            <group>
                <item
                    android:id="@+id/nav_fcw"
                    android:title="@string/txt_fcw_demo"
                    android:icon="@drawable/ic_vector_fcw"
                    app:showAsAction="ifRoom"/>

                <item
                    android:id="@+id/nav_rcw"
                    android:title="@string/txt_rcw_demo"
                    android:icon="@drawable/ic_vector_rcw"
                    app:showAsAction="ifRoom"/>

                <item
                    android:id="@+id/nav_lcw"
                    android:title="@string/txt_lcw_demo"
                    android:icon="@drawable/ic_vector_lcw"
                    app:showAsAction="ifRoom"/>
            </group>

        </menu>
    </item>
</menu>